[project]
name = "pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Richard Johansson", email = "richard.johansson@irf.se" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.6.16",
    "mkdocstrings-python>=1.16.12",
    "pandas>=2.3.1",
    "python-markdown-math>=0.9",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
